# yxr-codeforces-core

./: .buildinfo  .coveragerc  CHANGELOG.md  README.md  codeforces_core.html  codeforces_core.interfaces.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: doc-sphinx-2-gh-pages.yml  unit-test.yml
_modules/: index.html
_modules/codeforces_core/: account.html  contest_list.html  contest_meta.html  contest_register.html  contest_standing.html  httphelper.html  kwargs.html  language.html  logging.html  problem.html  problems.html  submit.html  ui.html  unused_problem.html  url.html  util.html  websocket.html
_modules/codeforces_core/interfaces/: AioHttpHelper.html  Conf.html
_sources/: codeforces_core.interfaces.rst.txt  codeforces_core.rst.txt  index.rst.txt  modules.rst.txt
_sources/dev/: 00_install.md.txt  04_autotest.md.txt  05_rst_examples.rst.txt  index.rst.txt
_sources/user/: 01_examples.rst.txt  index.rst.txt
_static/: documentation_options.js
codeforces_core/: __init__.py  __main__.py  _http.py  account.py  config.py  constants.py  contest.py  contest_list.py  contest_meta.py  contest_register.py  contest_standing.py  httphelper.py  judge.py  language.py  problem.py  problems.py  submit.py  ui.py  unused_contest.py  unused_http.py  unused_judge.py  unused_problem.py  unused_ui.py  util.py  websocket.py
codeforces_core/interfaces/: AioHttpHelper.py  Conf.py  __init__.py
dev/: 00_install.html  01_doc.html  02_debug.html  03_lint.html  04_autotest.html  05_publish.html  05_rst_examples.html  index.html
docs/: .gitignore  conf.py  index.rst
docs/dev/: 00_install.md  01_doc.md  02_debug.md  03_lint.md  04_autotest.md  05_publish.rst  index.rst
docs/user/: 00_install.rst  01_examples.rst  02_about.rst  index.rst
tests/: constant.py
tests/e2e/: .gitignore  README.md  __init__.py  e2e_test_config.template.py  test_contest_register.py  test_login.py  test_settings.py  test_submit.py
tests/e2e/.temp/: README.md
tests/helper/: MockAioHttpHelper.py
tests/unit/: test_account.py  test_calc_tta.py  test_contest_list.py  test_contest_meta.py  test_contest_standing.py  test_language.py  test_problem.py  test_problems.py  test_submit.py  test_websocket.py
tests/unit/mock/: README.md  contest_1777_submission.html  contest_1779.html  contest_1779_problem_F.html  contest_1779_problems.html  contest_1799_standing.html  contest_1799_standing_friends.html  contests.html  contests_2.html  logged-codeforces.com.html  main.cpp  notlogged-codeforces.com.html  problemset_submit.html  ws_contest_submission.text
user/: 00_install.html  01_examples.html  02_about.html  index.html
